added the dtechtive page

--- a/scotgov/catalog/locales/en-custom.json
+++ b/scotgov/catalog/locales/en-custom.json
@@ -85,17 +85,16 @@
    "MEDIN_2_GEMINI_22": "MEDIN 2.3 to GEMINI 2.2",
    "xml_gemini22gemini23": "GEMINI 2.2 to GEMINI 2.3",
    "tmsLinkDetails":"This dataset is published in the view service (TMS) available at <a href='{{url}}' target='_blank' class='tms'>{{url}}</a> with identifier <strong>{{layer}}</strong>.",
-  "esriRestLinkDetails": "ESRI REST service <a href='{{url}}' target='_blank' class='esrirest'>{{url}}</a>.",
-  "wmsLinkDetails": "This dataset is published in the view service (WMS) available at <a href='{{url}}' target='_blank' class='wmslayer'>{{url}}</a> with layer name <strong>{{layer}}</strong>.",
-  "wmsServiceLinkDetails": "This dataset is published in the view service (WMS) available at <a href='{{url}}' target='_blank' class='wmsservice'>{{url}}</a>.",
-  "wmtsLinkDetails": "This dataset is published in the view service (WMTS) available at <a href='{{url}}' target='_blank' class='wmtsid'>{{url}}</a> with identifier <strong>{{layer}}</strong>.",
-  "wmtsServiceLinkDetails": "This dataset is published in the view service (WMTS) available at <a href='{{url}}' target='_blank' class='wmts'>{{url}}</a>.",
-  "wfsLinkDetails": "This dataset is published in the download service (WFS) available at <a href='{{url}}' target='_blank' class='wfslayer'>{{url}}</a> with layer name <strong>{{layer}}</strong>.",
-  "wfsServiceLinkDetails": "This dataset is published in the download service (WFS) available at <a href='{{url}}' target='_blank' class='wfsservice'>{{url}}</a>.",
-  "wcsLinkDetails": "This dataset is published in the download service (WCS) available at <a href='{{url}}' target='_blank' class='wcs'>{{url}}</a> with layer name <strong>{{layer}}</strong>.",
-  "sosLinkDetails": "This dataset is published in the sensor observation service (SOS) available at <a href='{{url}}' target='_blank' class='sos'>{{url}}</a> with name <strong>{{layer}}</strong>.",
-  "atomLinkDetails": "This dataset is published in the Atom Feed available at <a href='{{url}}' target='_blank' class='atom'>{{url}}</a> with name <strong>{{layer}}</strong>.",
-  "gmd:DQ_CompletenessCommission": "Data Quality Reports (Completeness)",
+   "esriRestLinkDetails": "ESRI REST service <a href='{{url}}' target='_blank' class='esrirest'>{{url}}</a>.",
+   "wmsLinkDetails": "This dataset is published in the view service (WMS) available at <a href='{{url}}' target='_blank' class='wmslayer'>{{url}}</a> with layer name <strong>{{layer}}</strong>.",
+   "wmsServiceLinkDetails": "This dataset is published in the view service (WMS) available at <a href='{{url}}' target='_blank' class='wmsservice'>{{url}}</a>.",
+   "wmtsLinkDetails": "This dataset is published in the view service (WMTS) available at <a href='{{url}}' target='_blank' class='wmtsid'>{{url}}</a> with identifier <strong>{{layer}}</strong>.",
+   "wmtsServiceLinkDetails": "This dataset is published in the view service (WMTS) available at <a href='{{url}}' target='_blank' class='wmts'>{{url}}</a>.",
+   "wfsLinkDetails": "This dataset is published in the download service (WFS) available at <a href='{{url}}' target='_blank' class='wfslayer'>{{url}}</a> with layer name <strong>{{layer}}</strong>.",
+   "wfsServiceLinkDetails": "This dataset is published in the download service (WFS) available at <a href='{{url}}' target='_blank' class='wfsservice'>{{url}}</a>.",
+   "wcsLinkDetails": "This dataset is published in the download service (WCS) available at <a href='{{url}}' target='_blank' class='wcs'>{{url}}</a> with layer name <strong>{{layer}}</strong>.",
+   "sosLinkDetails": "This dataset is published in the sensor observation service (SOS) available at <a href='{{url}}' target='_blank' class='sos'>{{url}}</a> with name <strong>{{layer}}</strong>.",
+   "atomLinkDetails": "This dataset is published in the Atom Feed available at <a href='{{url}}' target='_blank' class='atom'>{{url}}</a> with name <strong>{{layer}}</strong>.",
    "gmd:DQ_CompletenessOmission": "Data Quality Reports (Omission)",
    "gmd:DQ_ThematicAccuracy": "Data Quality Reports (Thematic Accuracy)",
    "gmd:DQ_TemporalAccuracy": "Data Quality Reports (Temporal Accuracy)",
@@ -104,7 +103,6 @@
    "gmd:DQ_LogicalConsistency": "Data Quality Reports (Logical Consistency)",
    "gmd:DQ_FormatConsistency": "Data Quality Reports (Format Consistency)",
    "gmd:DQ_ConceptualConsistency": "Data Quality Reports (Conceptual Consistency)",
-   "gmd:DQ_DomainConsistency": "Data Quality Reports (Domain Consistency)",
    "gmd:MD_LegalConstraints": "Legal Constraints",
-   "dtime": "Dtime"
+   "dtechtive": "Dtechtive"
 }
