various changes to add customisations

--- a/scotgov/catalog/locales/en-custom.json
+++ b/scotgov/catalog/locales/en-custom.json
@@ -16,6 +16,7 @@
    "workspace-help": "Namespace prefix and namespace URL corresponding to the workspace data has to be published in.",
    "os-update-revisiondate": "Update Ordnance Survey Revision Date",
    "_cat": "License Type",
+   "facet-cat.keyword": "License Type",
    "categories": "License Type",
    "category": "License Type",
    "cookieWarning": "This webpage uses cookies. Click below to accept and hide this message or <a _target='blank' href='https://cookies.insites.com/'>change your cookie settings</a>. See our <a _target='blank' href='https://scottish-sdi-metadata-portal.readthedocs.io/en/latest/privacy.html'>privacy policy</a> to find out more about how cookies are used on this site.",
@@ -44,7 +45,7 @@
    "searchOver": "Welcome to the SpatialData.gov.scot Metadata Portal, Scotland’s catalogue of spatial data. Here you can find, share and reuse spatial data provided by Scottish public sector organisations. You can explore the data by INSPIRE theme, topic, organisation and geography. Read more about how to use this site in the <a target='_blank' href='http://scottish-sdi-metadata-portal.readthedocs.io'>online documentation</a>. For more information email us at <a href='mailto:SSDI.Metadata@gov.scot?subject='SSDI%20Portal%20Contact' target='_blank'>SSDI.Metadata@gov.scot</a>. This site respects your privacy. See our <a _target='blank' href='https://scottish-sdi-metadata-portal.readthedocs.io/en/latest/privacy.html'>privacy policy</a> to find out more about how we process, handle and protect your personal information while browsing or using this website.",
    "github": "Guidance",
    "listOfCategories": "Categories",
-   "sourceCatalog": "Source Catalogue",
+   "sourceCatalog": "Provided by",
    "backTomap": "Back to map",
    "copiedToClip": "Text copied to clipboard",
    "ManageLayers":"Manage Layers",
@@ -72,7 +73,7 @@
    "mInteractionTool": "Measure",
    "basket": "Saved records",
    "emptyBasket": "No saved records",
-   "updatedOn": "Metadata Updated: ",
+   "updatedOn": "Metadata Updated",
    "assignToCategory": "Assign licence type",
    "updateCategories" :"Update licence",
    "xml_gemini22gemini23-schemaupgrade": "Batch convert from Gemini 2.2 to Gemini 2.3",
