--- a/scotgov/catalog/locales/en-custom.json
+++ b/scotgov/catalog/locales/en-custom.json
@@ -94,6 +94,9 @@
    "wcsLinkDetails": "This dataset is published in the download service (WCS) available at <a href='{{url}}' target='_blank' class='wcs'>{{url}}</a> with layer name <strong>{{layer}}</strong>.",
    "sosLinkDetails": "This dataset is published in the sensor observation service (SOS) available at <a href='{{url}}' target='_blank' class='sos'>{{url}}</a> with name <strong>{{layer}}</strong>.",
    "atomLinkDetails": "This dataset is published in the Atom Feed available at <a href='{{url}}' target='_blank' class='atom'>{{url}}</a> with name <strong>{{layer}}</strong>.",
+   "iso19139.gemini22": "Gemini 2.2",
+   "iso19139.gemini23": "Gemini 2.3",
+   "iso19139":"ISO19139",
    "gmd:DQ_CompletenessCommission": "Data Quality Reports (Completeness Comission)",
    "gmd:DQ_CompletenessOmission": "Data Quality Reports (Completeness Omission)",
    "gmd:DQ_ThematicAccuracy": "Data Quality Reports (Thematic Accuracy)",
