minor wording changes

--- a/geonetwork/catalog/locales/en-admin.json
+++ b/geonetwork/catalog/locales/en-admin.json
@@ -273,6 +273,9 @@
     "simpleurl-pageFromParamHelp": "",
     "pageSizeParam": "Size URL parameter",
     "simpleurl-pageSizeParamHelp": "",
+    "simpleurl-category": "License type",
+    "toISOConversion": "XSL Transformation",
+    "simpleurl-toISOConversionHelp": "",
     "groupDeleteError": "Error when deleting group",
     "groupDeleteConfirm": "Do you really want to delete the group?",
     "userDeleteError": "Error when deleting user",
