--- a/geonetwork/catalog/locales/en-core.json
+++ b/geonetwork/catalog/locales/en-core.json
@@ -583,5 +583,6 @@
     "facet-mdStatus": "Workflow progress",
     "skipLink": "Skip and go to the content",
     "batchSubmitTitle": "Batch metadata submission",
-    "batchSubmitInfo": "This option submits the selected metadata owned by the user."
+    "batchSubmitInfo": "This option submits the selected metadata owned by the user.",
+    "facet-cat.keyword": "Categories"
 }
