--- a/geonetwork/catalog/locales/en-core.json
+++ b/geonetwork/catalog/locales/en-core.json
@@ -188,15 +188,17 @@
     "sortedBy": "Sorted by {{field}}",
     "sortBy-dateStamp": "last updates",
     "sortBy-createDate": "new records",
-    "sortBy-resourceTitleObject.default.keyword": "title",
+    "sortBy-resourceTitleObject.default.keywordAsc": "title",
     "sortBy-relevance": "relevancy",
     "sortBy-rating": "rating",
     "sortBy-title": "title",
-    "sortBy-changeDate": "modified",
+    "sortBy-changeDate": "date modified",
     "rating": "rating",
     "popularity": "popularity",
     "sortBy-popularity": "popularity",
+    "sortBy-resolutionScaleDenominatorDesc":"low scale first",
     "sortBy-denominatorDesc": "low scale first",
+    "sortBy-resolutionScaleDenominatorAsc":"high scale first",
     "sortBy-denominatorAsc": "high scale first",
     "selected": "selected",
     "actionsOnSelection": "Choose an action to apply to current selection ...",
