--- a/nrw/geonetwork/catalog/locales/cy-core.json
+++ b/nrw/geonetwork/catalog/locales/cy-core.json
@@ -80,7 +80,7 @@
     "validInspireStatus-0": "INSPIRE invalid",
     "wfsNoOutputFormats": "No output format found in download service capability.",
     "fre": "Français",
-    "cym": "Cymraeg",
+    "wel": "Cymraeg",
     "roh": "Rumantsch",
     "ara": "عربي",
     "kor": "Korean",
