--- a/geonetwork/catalog/locales/en-admin.json
+++ b/geonetwork/catalog/locales/en-admin.json
@@ -84,6 +84,8 @@
     "cantDeleteGroupHavingRecords": "This group contains records. Move all records to another group to be able to remove it.",
     "cantDeleteUserHavingRecords": "A user with records can't be deleted. Transfer records to another user.",
     "catalogInformation": "Catalog information",
+    "host.name": "Hostname",
+    "envInformation": "Environment variables",
     "categories": "Categories",
     "categoryDescriptionHelp": "Default category for metadata created in this group",
     "categoryName": "Identifier",
@@ -180,17 +182,27 @@
     "data.configDir": "Configuration folder: ",
     "data.dataDir": "Data directory: ",
     "data.formatterPath": "Formatter directory: ",
+    "data.htmlCacheDir": "HTML cache directory:",
     "data.indexConfigDir": "Index configuration folder: ",
     "data.resources": "Resources folder: ",
     "data.backupDir": "Backup folder: ",
     "data.schemaPluginsDir": "Standard folder: ",
+    "data.schemaPublicationDir": "Schema publication folder: ",
     "data.subversionPath": "Subversion repository: ",
+    "data.geonetworkDataDir": "Base directory: ",
     "databaseStatus": "Database status",
     "db.maxactive": "Maximum number of connections",
     "db.numactive": "Active connections",
     "db.numidle": "Available connections",
     "db.openattempt": "Status",
     "db.url": "JDBC URL",
+    "db.type": "Type",
+    "db.version": "Version",
+    "db.driver": "JDBC Driver",
+    "db.driverVersion": "JDBC Driver Version",
+    "db.username": "Username",
+    "db.schema": "Schema",
+    "db.name": "Name",
     "dbInformation": "Database",
     "dbUrl": "Database",
     "defineCatalogLogo": "Define the logo to use for the catalog",
@@ -216,6 +228,7 @@
     "emptyPortal": "Portal <strong>{{portal}}</strong> is empty. You can check its <a href='#/settings/sources'>configuration</a> or <a href='catalog.edit'>create or import records</a>.",
     "emptyCatalogShouldBeFilled": "The catalog is empty, you probably want to import new records or configure a harvester. You could also insert <a href='#/metadata/metadata-and-template/load-templates/all'>all templates</a>, <a href='#/metadata/metadata-and-template/load-samples/all'>all samples</a> or <a href='#/metadata/metadata-and-template/load-samples-and-templates/all'>both</a>.",
     "enable": "Enable",
+    "disable": "Disable",
     "enableAllowedCategories": "Enable Allowed Categories",
     "exportLogAsZIP": "Export (ZIP)",
     "facetIndicatorHelp": "Statistics by records are defined based on facets configuration and may represent only the most frequent values.",
@@ -273,9 +286,6 @@
     "simpleurl-pageFromParamHelp": "",
     "pageSizeParam": "Size URL parameter",
     "simpleurl-pageSizeParamHelp": "",
-    "simpleurl-category": "License type",
-    "toISOConversion": "XSL Transformation",
-    "simpleurl-toISOConversionHelp": "",
     "groupDeleteError": "Error when deleting group",
     "groupDeleteConfirm": "Do you really want to delete the group?",
     "userDeleteError": "Error when deleting user",
@@ -351,6 +361,7 @@
     "harvesterUnchangedRecords": "Unchanged",
     "harvesterType": "Node type",
     "harvesterUpdated": "Harvester updated",
+    "harvesterUpdateError": "Error on updating harvester",
     "harvesterValidate": "Validate records before import",
     "harvesterValidateHelp": "Invalid records will be rejected. Validation is based on the standard validation (ie. XSD, Schematrons).",
     "index.lucene.config": "Lucene configuration",
@@ -408,7 +419,6 @@
     "manageGroups": "Manage groups",
     "manageLogo": "Logo",
     "manageMapServers": "Map servers",
-    "manageStaticPages": "Manage static pages",
     "manageThesaurus": "Thesaurus",
     "manageMetadataIdentifierTemplates": "Metadata Identifier templates",
     "manageUsers": "Manage users",
@@ -703,8 +713,9 @@
     "system/inspire/remotevalidation/urlquery-help": "When using the official INSPIRE validator, in order to preserve the quotas, configure this end-point with the value https://inspire.ec.europa.eu/validator/. It will be used for all operations except the one accessed via /v2/TestRuns, that will use the API gateway URL (INSPIRE remote validation URL). If you use your own instance of the INSPIRE validator, leave this value empty.",
     "system/intranet": "Intranet",
     "system/intranet/network": "Network",
+    "system/intranet/network-help": "The network and netmask parameters are used to identify internal connections to the catalogue, that is, to identify the intranet group. It can be a comma separated list of IP addresses.",
     "system/intranet/netmask": "Netmask",
-    "system/intranet/network-help": "The network and netmask parameters are used to identify internal connections to GeoNetwork, that is, to identify the intranet group.",
+    "system/intranet/netmask-help": "Define as many netmask and IP addresses.",
     "system/localrating": "Metadata rating",
     "system/localrating/enable": "Local rating",
     "system/localrating/enable-help": "If set, GeoNetwork will calculate user ratings for metadata from this node only (not distributed among other GeoNetwork nodes).",
@@ -841,8 +852,8 @@
     "metadata/workflow": "Metadata workflow",
     "metadata/workflow/automaticUnpublishInvalidMd": "Automatic unpublication of invalid metadata",
     "metadata/workflow/automaticUnpublishInvalidMd-help": " Automatically unpublishes metadata that is edited that becomes not valid according to xsd or schematron rules.",
-    "metadata/workflow/allowSumitApproveInvalidMd": "Allow submission/approval of invalid metadata",
-    "metadata/workflow/allowSumitApproveInvalidMd-help": "Allows the submission/approval of metadata that is not valid according to xsd or schematron rules.",
+    "metadata/workflow/allowSubmitApproveInvalidMd": "Allow submission/approval of invalid metadata",
+    "metadata/workflow/allowSubmitApproveInvalidMd-help": "Allows the submission/approval of metadata that is not valid according to xsd or schematron rules.",
     "metadata/workflow/allowPublishNonApprovedMd": "Allow publication of non-approved metadata",
     "metadata/workflow/allowPublishNonApprovedMd-help": "Allows the publication of metadata that is not approved.",
     "metadata/workflow/allowPublishInvalidMd": "Allow publication of invalid metadata",
@@ -857,11 +868,19 @@
     "metadata/import": "Metadata import",
     "metadata/import/restrict": "Restrict import to schemas",
     "metadata/import/restrict-help": "List of all allowed schemas for metadata to be imported. If the metadata schema is not allowed, then the import is not done. No value means all schemas allowed.",
-    "metadata/import/userprofile": "Select the minimum user profile allowed to import metadata",
+    "metadata/import/userprofile": "Minimum user profile allowed to import metadata",
     "metadata/import/userprofile-help": "Minimum user profile allowed to import metadata (Editor, Reviewer or Administrator). The default value is Editor.",
     "metadata/delete": "Metadata delete",
-    "metadata/delete/profilePublishedMetadata": "Select the minimum user profile allowed to delete published metadata",
+    "metadata/delete/profilePublishedMetadata": "Minimum user profile allowed to delete published metadata",
     "metadata/delete/profilePublishedMetadata-help": "Minimum user profile allowed to delete published metadata (Editor, Reviewer or Administrator). The default value is Editor.",
+    "metadata/batchediting": "Metadata Batch Editing",
+    "metadata/batchediting/accesslevel": "Select the minimum user profile allowed to access batch editing",
+    "metadata/batchediting/accesslevel-help": "Select the minimum user profile allowed to access batch editing (Editor, Reviewer or Administrator). The default value is Editor.",
+    "metadata/publication": "Metadata publication",
+    "metadata/publication/profilePublishMetadata": "Minimum user profile allowed to publish metadata",
+    "metadata/publication/profilePublishMetadata-help": "Minimum user profile allowed to publish metadata (Reviewer or Administrator). The default value is Reviewer.",
+    "metadata/publication/profileUnpublishMetadata": "Minimum user profile allowed to un-publish metadata",
+    "metadata/publication/profileUnpublishMetadata-help": "Minimum user profile allowed to un-publish metadata (Reviewer or Administrator). The default value is Reviewer.",
     "filterStatusByAuthor":"Status author",
     "filterStatusByOwner":"Status owner",
     "filterStatusByRecordId":"Record identifier",
@@ -942,7 +961,7 @@
     "useLogoForCatalog": "Use it for the node",
     "useLogoForCatalogFavicon": "Use it for the node favorite icon",
     "userRecord": " record found for ",
-    "userRecords": " records, including templates but excluding records with indexing errors, found for ",
+    "userRecords": " records found for ",
     "userUpdateError": "User can't be created or updated",
     "userUpdated": "User updated",
     "users": "Users",
@@ -1022,6 +1041,8 @@
     "region/getmap/background": "Background map, URL or Named Layer ID",
     "region/getmap/mapproj": "Map projection",
     "region/getmap/summaryWidth": "Summary width",
+    "region/getmap/useGeodesicExtents": "Display geodesic extents",
+    "region/getmap/useGeodesicExtents-help": "By default, the displayed metadata extents are planar (i.e. rectangular). If you enable this option, the metadata extents will become geodesic. If the map uses a projected coordinate system, this may lead to non-rectangular extents (e.g. trapezoid).",
     "region/getmap/width": "Width",
     "metadata/editor": "Metadata editor configuration",
     "metadata/editor/schemaConfig": "Standard configuration",
@@ -1057,6 +1078,11 @@
     "ui-createPageTpl-horizontal": "Horizontal",
     "ui-createPageTpl-vertical": "Vertical",
     "ui-createPageTpl-other": "Custom",
+    "ui-resultViewTpls-icon": "Icon",
+    "ui-resultViewTpls-tplUrl": "HTML template URL",
+    "ui-resultViewTpls-tooltip": "Tooltip",
+    "ui-resultViewTpls-relatedTypes": "(optional) Related types to load",
+    "ui-resultViewTpls-source": "(optional) Fields to exclude",
     "ui-languages": "List of languages",
     "ui-filters": "Filters",
     "ui-minUserProfileToCreateTemplate": "Which minimum profile is required to manage/create template?",
@@ -1106,14 +1132,19 @@
     "ui-isExportMapAsImageEnabled-help": "This requires CORS to be enabled on the WMS services used in the map application. If not sure, you should disable that option as it may cause trouble displaying WMS layers.",
     "ui-is3DModeAllowed": "Allow 3D mode",
     "ui-is3DModeAllowed-help": "If enabled, user can switch the map to 3D mode. The map viewer needs to be enabled also. If you don't want to enable the 3D mode for all users, adding 'catalog.search?with3d' in the URL will also load 3D mode.",
+    "ui-singleTileWMS": "Use a single tile for WMS services",
+    "ui-singleTileWMS-help": "If enabled, a single image is requested to the WMS service, otherwise tiles are requested. When the 3D mode is enabled, the value of this setting is ignored and it's used tiling as 3D mode doesn't support single tiles.",
     "ui-isUserRecordsOnly": "Only my records ",
     "ui-isUserRecordsOnly-help": "If enabled, the checkbox \"Only my records\" will be checked by default in the editor dashboard",
     "ui-isFilterTagsDisplayed": "Display filter tags in dashboard",
     "ui-isFilterTagsDisplayed-help": "If enabled, display the list of filters applied in the dashboard and the batch editor dashboard",
     "ui-isFilterTagsDisplayedInSearch": "Display filter tags in the search results",
     "ui-isFilterTagsDisplayedInSearch-help": "If enabled, display the list of filters applied in the search results page",
-    "ui-showMapInFacet": "Display map in left column over search filter",
-    "ui-showMapInFacet-help": "If enabled, display the map in the left column and not in default position of lower right corner",
+    "ui-searchMapPlacement": "Search result map placement",
+    "searchMapPlacement-facets": "Above search filter",
+    "searchMapPlacement-results": "Lower right to results",
+    "searchMapPlacement-": "Not display",
+    "ui-searchMapPlacement-help": "Define where to display the search results map highlighting records bounding box.",
     "ui-showStatusFooterFor": "Highlight status in the record footer",
     "ui-showStatusFooterFor-help": "List of codelist values (eg. completed,historicalArchive,obsolete,superseded) for which the footer has the status background color.",
     "ui-showBatchDropdown": "Show the selection dropdown in the search page",
@@ -1122,6 +1153,8 @@
     "map/isMapViewerEnabled-help": "If unselected, the map tab will be disabled and will not be used.",
     "ui-isSaveMapInCatalogAllowed": "Allow users to save maps as metadata record",
     "ui-isSaveMapInCatalogAllowed-help": "From the map viewer, user can set the map title and abstract and save the map directly with the OWS context in the catalog as a metadata record.",
+    "ui-isAccessible": "Make the Map accessible",
+    "ui-isAccessible-help": "When the Map is accessible it can be used with a keyboard and will work when it has the focus. Note: when the Map is accessible zoom in and out with a mouse won't work until the map has the focus",
     "ui-advancedConfig": "JSON configuration",
     "ui-workflowAssistApps": "List of workflow assist apps",
     "ui-workflowAssistApps-help": "External Workflow assist applications. For example: App url: https://www.example.com/{isoLang}/{uuid} Label Key: WorkflowAssistApps-example-label. (this key should present in *-custom.json for translations.). URL can contain the following variables between '{' and '}': <ul><li><strong>uuid</strong> for the current metadata uuid</li><li><strong>lang</strong> for 3 letters language code</li><li> <strong>isoLang</strong> for 2 letters language code.</li></ul>",
@@ -1178,6 +1211,8 @@
     "mapConfigContext-help": "URL to the map context file which can contain the variable lang, for 3 letters language code, between '{' and '}'",
     "mapConfigExtent": "Extent, expressed in current projection",
     "mapConfigLayers": "Layer objects in JSON: {\"type\"=\"XXX\",\"arg1\":\"YYY\",...}",
+    "mapConfigSearchGeodesicExtents": "Display geodesic extents for metadata results",
+    "mapConfigSearchGeodesicExtents-help": "By default, the displayed metadata extents are planar (i.e. rectangular). If you enable this option, the metadata extents will become geodesic. If the map uses a projected coordinate system, this may lead to non-rectangular extents (e.g. trapezoid).",
     "system/xlinkResolver/referencedDeletionAllowed": "Allow deletion of subtemplates referenced through an xlink.",
     "system/xlinkResolver/referencedDeletionAllowed-help": "Checked means allow.",
     "ui-grid": "Search results configuration",
@@ -1294,8 +1329,6 @@
     "ui-logoInHeaderPosition-help": "Position of the logo in the header",
     "ui-isHeaderFixed": "Fix the header",
     "ui-isHeaderFixed-help": "The header is fixed and stays at the top of the page. Attention: when the option [Show the logo in header] is also selected, the header needs a set height. This can be done under [CSS & Style] > [Header] > [Height]",
-    "ui-isMenubarAccessible": "Make menubar Accessible",
-    "ui-isMenubarAccessible-help": "Make menubar item open on click, not on hover. This means that the menuitems will be accessible by keyboard.",
     "ui-sortKeywordsAlphabetically": "Sort keywords / categories / topic categories alphabetically",
     "ui-sortKeywordsAlphabetically-help": "Display the keywords / categories /  topic categories sorted alphabetically. If not enabled are displayed in the order that are assigned to the metadata.",
     "left": "Left",
@@ -1369,6 +1402,8 @@
     "metadata/pdfReport/tocPage": "Add table of contents (TOC) page",
     "metadata/pdfReport/pdfName": "Report file name",
     "metadata/pdfReport/pdfName-help": "Report file name. The following template fields are allowed to be used: {year}, {month}, {day}, {date} and {datetime}. Template fields are replaced with the related date values. {date} uses 'yyyyMMdd' format and {datetime} uses 'yyyyMMddHHmmss' format.",
+    "metadata/pdfReport/headerLogoFileName": "Top banner file name",
+    "metadata/pdfReport/headerLogoFileName-help": "When a file is given, the pdf will be generated using this image as its top banner instead of its default one. Please add this image using the add new logo feature.",
     "metadata/csvReport": "Metadata selection - csv export",
     "metadata/csvReport/csvName": "CSV export file name",
     "metadata/csvReport/csvName-help": "Export metadata in CSV format file name. The following template fields are allowed to be used: {year}, {month}, {day}, {date} and {datetime}. Template fields are replaced with the related date values. {date} uses 'yyyyMMdd' format and {datetime} uses 'yyyyMMddHHmmss' format.",
@@ -1427,6 +1462,30 @@
     "uiConfigDeleteError": "Error deleting user interface configuration",
     "sourceRemoved": "Source removed",
     "sourceRemovedError": "Error while removing the source",
-    "saveThesaurus": "Save"
+    "saveThesaurus": "Save",
+    "manageStaticPages": "Static pages",
+    "newStaticPage": "New static page",
+    "updateStaticPage": "Update static page",
+    "confirmStaticPageDelete": "Are you sure you want to delete the static page?",
+    "staticPageUpdated": "Static page updated",
+    "staticPageUpdateError": "Error occurred while saving the static page",
+    "staticPageDeleteError": "Error while removing the static page",
+    "staticPageRemoved": "Static page removed",
+    "chooseStaticPageFile": "Choose or drop static page file here",
+    "ui-topCustomMenu": "Header custom menu items",
+    "ui-topCustomMenu-help": "List of static page IDs associated with the header section to display: <ul><li>When a list is provided, the links are displayed in the order provided and only for the pages listed.</li><li>When a list is not provided, all static pages configured for the header section are displayed, with no guaranteed order.</li>.\nPages can be inserted in between catalogue default menu which are: <pre>[\"gn-site-name-menu\",\n    \"gn-portal-switcher\",\n    \"gn-search-menu\",\n    \"gn-map-menu\",\n    \"gn-contribute-menu\",\n    \"gn-admin-menu\"]</pre>. Insert a page as a simple menu using its id eg. <pre>\"documentation\"</pre> or as a submenu using an object: <pre>{\"Quick search\": [\n  \"searchForAfrica\", \n  \"forReview\"\n]}</pre>",
+    "ui-footerCustomMenu": "Footer custom menu items",
+    "ui-footerCustomMenu-help": "List of static page IDs associated with the footer section to display: <ul><li>When a list is provided, the links are displayed in the order provided and only for the pages listed.</li><li>When a list is not provided, all static pages configured for the footer section are displayed, with no guaranteed order.</li>",
+    "es.url": "Elasticsearch server",
+    "es.version": "Elasticsearch version",
+    "es.index": "Index name",
+    "systemPropertiesProxyConfiguration": "Using http proxy settings in system properties.",
+    "app.version": "Application version",
+    "app.subVersion": "Application minor version",
+    "fieldRequired": "The value is required",
+    "fieldTooLong": "The value is too long",
+    "fieldTooShort": "The value is too short",
+    "fieldEmailNotValid": "A valid email address is required",
+    "formConfirmExit": "The form has changes, if you exit the changes will be lost. Do you want to exit on the page?"
 }
 
