--- a/geonetwork/catalog/locales/en-core.json
+++ b/geonetwork/catalog/locales/en-core.json
@@ -9,7 +9,6 @@
     "basket": "Basket",
     "emptyBasket": "Nothing in basket",
     "searchSelectedRecord": "Search records",
-    "author": "Author",
     "advanced": "Advanced",
     "basic": "Basic",
     "none": "none",
@@ -18,8 +17,6 @@
     "Editor": "Editor",
     "Keywords": "Keywords",
     "crs": "Coordinate reference system",
-    "custodian": "Custodian",
-    "distributor": "Distributor",
     "search": "Search",
     "METADATA": "Metadata",
     "RegisteredUser": "Registered user",
@@ -80,7 +77,6 @@
     "validInspireStatus-0": "INSPIRE invalid",
     "wfsNoOutputFormats": "No output format found in download service capability.",
     "fre": "Français",
-    "cym": "Cymraeg",
     "roh": "Rumantsch",
     "ara": "عربي",
     "kor": "Korean",
@@ -161,6 +157,7 @@
     "keywordFilter": "Filter keyword",
     "keywords": "Keywords",
     "recordOwner": "Record owner",
+    "groupRecordOwner": "Group record owner",
     "map": "Map",
     "makeYourMap": "Map",
     "metadataPOCs": "Contact for the metadata",
@@ -187,19 +184,16 @@
     "hitsPerPage": "Records per page",
     "chooseRecordsPerPage": "Click to choose the number of records per page",
     "sortedBy": "Sorted by {{field}}",
-    "sortBy-dateStamp": "last updates",
-    "sortBy-createDate": "new records",
-    "sortBy-resourceTitleObject.default.keywordAsc": "title",
+    "sortBy-dateStampDesc": "last updates",
+    "sortBy-createDateDesc": "new records",
+    "sortBy-resourceTitleObject.default.sort": "title (ascending)",
+    "sortBy-resourceTitleObject.default.sortDesc": "title (descending)",
     "sortBy-relevance": "relevancy",
-    "sortBy-rating": "rating",
-    "sortBy-title": "title",
-    "sortBy-changeDate": "date modified",
+    "sortBy-ratingDesc": "rating",
     "rating": "rating",
     "popularity": "popularity",
-    "sortBy-popularity": "popularity",
-    "sortBy-resolutionScaleDenominatorDesc":"low scale first",
+    "sortBy-popularityDesc": "popularity",
     "sortBy-denominatorDesc": "low scale first",
-    "sortBy-resolutionScaleDenominatorAsc":"high scale first",
     "sortBy-denominatorAsc": "high scale first",
     "selected": "selected",
     "actionsOnSelection": "Choose an action to apply to current selection ...",
@@ -212,17 +206,11 @@
     "topicCats" : "Topics",
     "organisation": "Organisation",
     "organization": "Organization",
-    "originator": "Originator",
-    "owner": "Owner",
     "atomChooseLayerToAdd": "Select a source",
     "mapLoadError": "Failed to load map from '{{url}}'.",
     "emptyMapLoadError": "Map from '{{url}}' is empty.",
-    "pointOfContact": "Point of Contact",
-    "processor": "Processor",
-    "principalInvestigator": "Principal Investigator",
     "privilegesUpdated": "Privileges updated.",
     "privilegesUpdatedError": "Error occurred while updating privileges.",
-    "publisher": "Publisher",
     "password": "Password",
     "passwordMinlength": "Password must contain at least {{length}} characters!",
     "passwordNotMatching": "The password does not match!",
@@ -230,7 +218,10 @@
     "passwordPattern": "Password must contain at least 1 uppercase, 1 lowercase, 1 number and 1 symbol. Symbols include: `~!@#$%^&*()-_=+[]{}\\|;:'\",.<>/?');",
     "passwordOld": "Old password",
     "passwordRepeat": "Repeat password",
-    "groupNameMaxlength": "Group name can not exceed 32 characters!",
+    "groupNameMaxlength": "Group name can not exceed 255 characters!",
+    "categoryNameMaxlength": "Category name can not exceed 255 characters!",
+    "portalNameMaxlength": "Portal name can not exceed 255 characters!",
+    "portalIdMaxlength": "Portal identifier can not exceed 255 characters!",
     "groupDescriptionMaxlength": "Group description can not exceed 255 characters!",
     "groupEmailMaxlength": "Group email can not exceed 128 characters!",
     "pol": "Polski",
@@ -245,7 +236,6 @@
     "resetPassword": "Reset password",
     "resetPasswordTitle": "Reset {{user}} password.",
     "resetPasswordError": "Error occurred while resetting password",
-    "resourceProvider": "Resource Provider",
     "rus": "Русский",
     "save": "Save",
     "scrollTop": "Scroll to top",
@@ -264,6 +254,7 @@
     "signIn": "Sign in",
     "signedInAs": "Signed in as",
     "signout": "Sign out",
+    "signoutDescription": "You are already logged in, click the button to logout.",
     "somethingWrong": "Something went wrong!",
     "south": "South",
     "siblings": "Associated resources",
@@ -391,6 +382,7 @@
     "layerNotAvailableInMapProj": "The service does not provide the layer in the map projection '{{proj}}'. The layer will be added to the map but may not be displayed properly.",
     "layerCRSNotFound": "The layer does not provide coordinate reference system information. This may be related to a WMS version lower than 1.3.0.",
     "layerTileLoadError": "Something went wrong while loading tile <a href='{{url}}' target='_blank'>'{{url | limitTo: 30}} ...'</a> for layer '{{layer}}'.",
+    "layerProtocolNotSupported": "The following protocol is not supported yet in the map viewer: {{type}}",
     "getCapFailure":"The WMS getCapabilities request failed",
     "standards": "Metadata standard",
     "documentStandard": "Metadata standard",
@@ -411,6 +403,7 @@
     "featureAttributeTable": "Attribute table",
     "attributeName": "Name",
     "attributeDefinition": "Definition",
+    "attributeCardinality": "Cardinality:",
     "attributeValues": "List of values",
     "attributeType": "Type",
     "attributeCode": "Code",
@@ -519,7 +512,7 @@
     "indexingTaskFinished": "Indexing finished, {{total}} records processed",
     "indexingTaskFinishedWithErrors": "Indexing finished, {{total}} records processed with {{errors}} errors",
     "indexingTaskCanceled": "Indexing canceled",
-    "inspireValidationTaskUndefined": "Unknow INSPIRE validation task (abnormal state)",
+    "inspireValidationTaskUndefined": "Unknown INSPIRE validation task (abnormal state)",
     "inspireValidationTaskRunning": "INSPIRE validation {{total}} records...",
     "inspireValidationTaskFinished": "INSPIRE validation finished, {{total}} records processed",
     "inspireValidationTaskFinishedWithErrors": "INSPIRE validation finished, {{total}} records processed with {{errors}} errors",
@@ -531,25 +524,22 @@
     "analyseRecordFinishedWithErrors": "Analyse over, {{total}} records processed with {{errors}} errorrs",
     "testLinkRunning": "{{total}} links to test...",
     "testLinkFinished": "Testing links over, {{total}} links tested",
-    "mdStatus-0": "Unknown",
-    "mdStatus-1": "Draft",
-    "mdStatus-2": "Approved",
-    "mdStatus-3": "Retired",
-    "mdStatus-4": "Submitted",
-    "mdStatus-5": "Rejected",
-    "mdStatus-21": "Approved with working copy",
-    "mdStatus-24": "Approved with working copy submitted",
-    "mdStatusTitle-41": "Cancel approval submission",
-    "mdStatusTitle-31": "Restore record to draft status",
-    "mdStatusTitle-42": "Approve metadata",
-    "mdStatusTitle-12": "Directly approve metadata",
-    "mdStatusTitle-33": "Retire metadata",
-    "mdStatusTitle-14": "Submit for review",
-    "mdStatusTitle-411": "Reject approval submission",
     "mdStatusButton-1": "Submit",
     "mdStatusButton-2": "Approve",
     "mdStatusButton-3": "Retire",
     "mdStatusButton-4": "Submit",
+    "mdStatusTitle-draft-to-submitted-editor": "Submit for review",
+    "mdStatusTitle-draft-to-submitted-reviewer": "Submit for review",
+    "mdStatusTitle-retired-to-draft-editor": "Restore record to draft status",
+    "mdStatusTitle-retired-to-draft-reviewer": "Restore record to draft status",
+    "mdStatusTitle-submitted-to-draft-editor": "Cancel approval submission",
+    "mdStatusTitle-submitted-to-draft-reviewer": "Reject approval submission",
+    "mdStatusTitle-submitted-to-approved-editor": "Approve metadata",
+    "mdStatusTitle-submitted-to-approved-reviewer": "Approve metadata",
+    "mdStatusTitle-approved-to-retired-editor": "Retire metadata",
+    "mdStatusTitle-approved-to-retired-reviewer": "Retire metadata",
+    "mdStatusTitle-draft-to-approved-reviewer": "Directly approve metadata",
+    "mdStatusWorkflowWithDraft": "{{metadataStatus}} (Working copy is {{draftStatus}})",
     "cancel": "Cancel",
     "workflow": "Workflow",
     "metadataPublished": "Metadata published.",
@@ -559,7 +549,7 @@
     "categoriesUpdated": "Categories updated.",
     "warnPublishDraft": "When publishing records with workflow enabled, the status will change to 'Approve'. Are you sure you want to continue?",
     "cancelWorkingCopy": "Cancel working copy",
-    "deleteWorkingCopyRecordConfirm": "Do you really want to remove the working copy '{{title}}'?",
+    "deleteWorkingCopyRecordConfirm": "Do you really want to remove the working copy '{{resourceTitle}}'?",
     "workingCopy": "Working copy",
     "onTheWeb": "More online information",
     "pdfReportTocTitle": "Contents",
@@ -587,5 +577,12 @@
     "skipLink": "Skip and go to the content",
     "batchSubmitTitle": "Batch metadata submission",
     "batchSubmitInfo": "This option submits the selected metadata owned by the user.",
-    "facet-cat.keyword": "Categories"
+    "reviewerNotAllowedPublish": "Reviewer not allowed to publish the metadata",
+    "reviewerNotAllowedUnpublish": "Reviewer not allowed to un-publish the metadata",
+    "reviewerNotAllowedPublishUnpublish": "Reviewer not allowed to publish / un-publish the metadata",
+    "missingTitle": "Missing title",
+    "mapLegend": "Legend",
+    "quality": "Quality",
+    "download": "Download",
+    "links": "Links"
 }
