added cym translation into cym-core and eng-core json files

--- a/nrw/geonetwork/catalog/locales/cym-core.json
+++ b/nrw/geonetwork/catalog/locales/cym-core.json
@@ -80,7 +80,7 @@
     "validInspireStatus-0": "INSPIRE invalid",
     "wfsNoOutputFormats": "No output format found in download service capability.",
     "fre": "Français",
-    "wel": "Cymraeg",
+    "cym": "Cymraeg",
     "roh": "Rumantsch",
     "ara": "عربي",
     "kor": "Korean",
