--- a/geonetwork/catalog/locales/en-core.json
+++ b/geonetwork/catalog/locales/en-core.json
@@ -77,6 +77,7 @@
     "validInspireStatus-0": "INSPIRE invalid",
     "wfsNoOutputFormats": "No output format found in download service capability.",
     "fre": "Français",
+    "cym": "Cymraeg",
     "roh": "Rumantsch",
     "ara": "عربي",
     "kor": "Korean",
