add custom facets and change colours of the homepage facets to NRW colours

--- a/geonetwork/catalog/locales/en-custom.json
+++ b/geonetwork/catalog/locales/en-custom.json
@@ -21,5 +21,7 @@
 	"gmd:DQ_ConceptualConsistency": "Data Quality Reports (Conceptual Consistency)",
 	"gmd:DQ_DomainConsistency": "Data Quality Reports (Domain Consistency and INSPIRE)",
 	"gmd:LI_Lineage": "Data Quality Reports (Lineage)",
-	"searchAlineage": "Search for a lineage report ..."
+	"searchAlineage": "Search for a lineage report ...",
+	"facet-formatSpecification": "Format specification",
+	"facet-hasOnlineResource": "Record has attached resource"
 }
