doing battle with welsh translations again

--- a/nrw/geonetwork/catalog/locales/cy-editor.json
+++ b/nrw/geonetwork/catalog/locales/cy-editor.json
@@ -4,8 +4,8 @@
     "add-extent-from-geokeywords-help": "Search all keywords from thesaurus of type 'place' and add matching extents.",
     "addCRS-help": "Add new CRS",
     "contactId": "Contact identifier",
-    "contactSetForMetadata": "Contact for the metadata",
-    "contactSetForResource": "Contact for the resource",
+    "contactSetForMetadata": "Cysylltwch ar gyfer y metadata",
+    "contactSetForResource": "Cyswllt ar gyfer yr adnodd",
     "contactReplace": "Replace existing contact",
     "contactRole": "Contact role",
     "addConcept": "Add concept to keyword list",
@@ -22,12 +22,12 @@
     "addLinks": "Add links",
     "addOnlinesrc": "Add online resource",
     "updateOnlinesrc": "Update link",
-    "addOnlinesrcTitle": "Link an online resource",
+    "addOnlinesrcTitle": "New link",
     "addThumbnail": "Add a thumbnail",
     "addThumbnailTitle": "Add an overview to the current metadata",
     "allChangesCanceled": "All changes cancelled.",
     "allChangesSaved": "All changes saved",
-    "allLanguage": "All",
+    "allLanguage": "Pob un",
     "allLanguage-help": "Display all languages",
     "applySuggestion": "Apply suggestion",
     "assignToCatalog": "Assign to current catalog",
@@ -44,7 +44,7 @@
     "removeField": "Remove this field",
     "addXpath-help": "Updating records using XPath needs careful definition of the changes. A change is defined by:",
     "addXpathTitle": "an optional title",
-    "addXpathXpath": "a mandatory <a href='http://xmlfr.org/w3c/TR/xpath/'>XPath</a> to point to the element(s) to update. XPath may contain a filter expression.",
+    "addXpathXpath": "a mandatory <a href='https://www.w3.org/TR/1999/REC-xpath-19991116/'>XPath</a> to point to the element(s) to update. XPath may contain a filter expression.",
     "addXpathInsertMode": "a type of update",
     "xpath": "XPath",
     "xpathValue": "Text or XML value",
@@ -66,11 +66,11 @@
     "listOfValuesSeparator": "Field separator",
     "changesToApply": "Changes to apply:",
     "resetChanges": "Reset changes",
-    "createSetFromSearch": "Search and select records or ",
+    "createSetFromSearch": "Search and select records or",
     "chooseAnExistingSet": "choose a predefined set",
     "chooseASetOfRecordHelp": "Select one or more records before defining the elements to update. Only records that you can edit are proposed.",
     "defineEditsHelp": "Depending on the type of records selected, the list of fields that you can update may change. When editing a mandatory field like title, the field is updated. When editing a field which can contain multiple values, the new value is added.",
-    "recordsInSelection": " record(s) in selection.",
+    "recordsInSelection": "record(s) in selection.",
     "displaySelectionOnly": "View selection only",
     "aboutToUpdateTheFollowing": "The following records will be updated:",
     "updateDateStamp": "Update the modification date in the metadata document (for example, gmd:dateStamp for ISO 19139)",
@@ -80,12 +80,12 @@
     "selectRecordsToEdit": "Select one or more records to edit.",
     "tooManyRecordInSelForSearch": "There are too many (ie. {{count}}) records in current selection to be displayed here as a full list. But the process will run on the current selection (see first tab).",
     "advancedBatchEditMode": "XPath mode",
-    "cancel": "Cancel",
+    "cancel": "Diddymu",
     "cancelChangesFromNow": "Cancel all changes since the start of the editing session {{timeAgo}}.",
     "cancelling": "Cancelling ...",
     "chooseZeroOrMoreLayer": "Optionally, choose one or more layers from the service to be added in the distribution:",
     "chooseZeroOrMoreLayerFromService": "Choose the layer published in this service corresponding to the selected record:",
-    "serviceContainsManyUrl": "Choose <strong>one</strong> URL in the <strong>{{count}}</strong> provided by ",
+    "serviceContainsManyUrl": "Choose <strong>one</strong> URL in the <strong>{{count}}</strong> provided by",
     "searchAservice": "Select a service from the catalog",
     "searchAnApplication": "Select an application from the catalog",
     "check": "Check",
@@ -97,16 +97,16 @@
     "chooseAType": "Choose a type",
     "chooseOnlinesrc": "Choose or drop resource here",
     "closeEditor": "Save & close",
-    "conceptBroader": " is more general than ",
-    "conceptNarrower": " is more specific than ",
-    "conceptRelated": " is related to ",
+    "conceptBroader": "is more general than",
+    "conceptNarrower": "is more specific than",
+    "conceptRelated": "is related to",
     "continent": "Continent",
     "copyPaste": "Copy/Paste",
-    "country": "Country",
-    "createA": "Create a ",
+    "country": "Gwlad",
+    "createA": "Create a",
     "createChildOf": "Create a child record",
     "createCopyOf": "Create copy",
-    "createMetadata": "Create",
+    "createMetadata": "Creu",
     "createMetadataError": "Create metadata error",
     "createMetadataForGroup": "Create and publish for group editors",
     "createMetadataForGroup-help": "The record will be editable by all members of the group",
@@ -122,13 +122,13 @@
     "description": "Description",
     "directory": "Folder path",
     "directoryEntries": "Entries",
-    "error": "Error",
+    "error": "Gwall",
     "errors": "Error(s)",
     "serviceDetachedToCurrentRecord": "Service detached from current record",
-    "featureCatalog": "Feature catalog",
+    "featureCatalog": "Catalog nodwedd",
     "file": "File",
     "fileType": "Type of file",
-    "fromTemplate": "From ",
+    "fromTemplate": "O",
     "esriRestServiceUrl": "ESRI REST URL",
     "generateUUID": "Generate UUID for inserted metadata",
     "geopublisher": "Publish as WMS, WFS, WCS",
@@ -136,17 +136,17 @@
     "cit:CI_Responsibility": "Organizations & contacts (ISO19115-3)",
     "mdq:DQ_AbsoluteExternalPositionalAccuracy": "External position accuracy",
     "mdq:DQ_DomainConsistency": "Domain consistency",
-    "mrd:MD_Format": "Formats",
-    "gmd:MD_Format": "Formats",
+    "mrd:MD_Format": "Fformatau",
+    "gmd:MD_Format": "Fformatau",
     "gmd:EX_Extent": "Extents",
     "gex:EX_Extent": "Extents",
     "mcc:MD_BrowseGraphic": "Logos",
     "gmd:MD_Distribution": "Online resources",
-    "mco:MD_Constraints": "Constraints",
-    "mco:MD_LegalConstraints": "Legal constraints",
-    "mco:MD_SecurityConstraints": "Security constraints",
+    "mco:MD_Constraints": "Cyfyngiadau",
+    "mco:MD_LegalConstraints": "Cyfyngiadau cyfreithiol",
+    "mco:MD_SecurityConstraints": "Cyfyngiadau diogelwch",
     "hasFeatureCatalog": "Using this feature catalog",
-    "importCPResult" :"One record imported. Record identifier is: {{id}} <br/> UUID: {{uuid}}.",
+    "importCPResult": "One record imported. Record identifier is: {{id}} <br/> UUID: {{uuid}}.",
     "importEntry": "Import directory entry",
     "importFromDir": "Import a set of files from a folder on the server",
     "importFromDirReport": "{{success}}/{{records}} record(s) imported successfully in {{time}} seconds.",
@@ -171,6 +171,8 @@
     "linkToSourceTitle": "Link a source dataset to the current metadata",
     "linkUrl": "URL to remove",
     "fileStore": "Metadata file store",
+    "filestoreUploadAFile": "or upload a new file",
+    "filestoreChooseAFile": "or choose a file from the filestore",
     "openResource": "Open resource",
     "linkMetadata": "Link metadata",
     "setResourceStatus": "Change resource status. This will not update references which may be contained in the metadata document.",
@@ -180,14 +182,13 @@
     "mefFile": "MEF",
     "metadataContent": "Metadata content",
     "metadataNotFound": "Warning! Requested metadata with id {{id}} not found. <a href='#/create'>Create a new one ?</a>",
-    "metadataType": "Type of record",
+    "metadataType": "Math o gofnod",
     "hasDqMeasures": "With quality measures",
     "generateThumbnail": "Generate thumbnail",
     "generateThumbnail-help": "Thumbnail will be created and saved in the filestore. Use the filestore to add the thumbnail in the metadata record.",
     "createAThumbnail": "Generate thumbnail using the view service",
-    "noLayersForThumbnail": "No layer defined in record to generate thumbnail from",
     "noTemplatesAvailable": "Warning! There is no templates available in the catalog. You should add or <a href='admin.console#/metadata'>import</a> some.",
-    "none": "None",
+    "none": "Dim un",
     "notFoundInThesaurus": "<strong>Warning! Keywords {{invalid}} not found in thesaurus.</strong> Others {{found}} were found in the thesaurus. 2 reasons: <ul><li>keywords in this record are in a language that is not in the current user interface language</li><li>keywords does not exists in the thesaurus</li></ul><strong>Those keywords will not be modified by this editing session</strong> unless you remove this thesaurus section.",
     "ocean": "Ocean",
     "isPublishedToAll": "Public",
@@ -215,12 +216,12 @@
     "onlineDiscoverArcGIS-help": "ArcGIS service URL to be used in desktop GIS or other app",
     "onlineDiscoverKML": "View KML",
     "onlineDiscoverKML-help": "KML or KMZ file to be used in Google apps to view data",
-    "localNetwork": "Access the resource (local network)",
+    "localNetwork": "Download (local network)",
     "localNetworkVectorFile": "Vector file",
     "localNetworkRasterFile": "Raster file",
     "localNetworkDBOracle": "Oracle",
     "localNetworkDBPostgis": "PostGIS",
-    "onlineDownload": "Access the resource",
+    "onlineDownload": "Lawrlwytho",
     "onlineDownloadKML": "Download as KML",
     "onlineDownloadKML-help": "KML or KMZ file to be used in Google apps to download data",
     "onlineDownloadFile": "Download a copy",
@@ -249,23 +250,23 @@
     "areYouSureToAddALinkWithError": "Current URL could not be retrieved by the catalog (may be an issue with the catalog proxy). You should check the link manually before adding it to the record?",
     "addLinkAnyway": "Add link anyway",
     "updateLinkAnyway": "Update link anyway",
-    "onlineFunction": "Function",
+    "onlineFunction": "Swyddogaeth",
     "applicationProfile": "Application profile",
     "fileStoreNoFileMatching": "No file found matching filter ({{filter}}). Upload one if needed.",
-    "other": "Other",
+    "other": "Arall",
     "onlineResourceName": "Resource name",
     "protocol": "Protocol",
     "runServiceError": "Error happened while calling service",
     "overwriteFile": "Overwrite file if it exists",
-    "overview": "Overview",
+    "overview": "Trosolwg",
     "overviews": "Overviews",
     "overwrite": "Overwrite metadata with same UUID",
     "parentMd": "Parent Metadata",
-    "print_layout": "Layout",
-    "print_scale": "Scale",
+    "print_layout": "Cynllun",
+    "print_scale": "Graddfa",
     "process": "Process",
-    "publish": "Publish",
-    "publishIn": "Publish <strong>{{layer}}</strong> in ",
+    "publish": "Cyhoeddi",
+    "publishIn": "Publish <strong>{{layer}}</strong> in",
     "publishSuccess": "Successful publication. Layer added to map preview",
     "recommendedValues": "Recommended values",
     "recursive": "Also search in subfolders",
@@ -286,13 +287,13 @@
     "schematron-rules-geonetwork": "Recommendations",
     "schematron-rules-inspire": "INSPIRE rules",
     "schematron-rules-iso": "ISO rules",
-    "searchACRS": " or search for a coordinate system ...",
+    "searchACRS": "or search for a coordinate system ...",
     "searchAreport": "Search for a quality report ...",
     "searchAlogo": "Search for a logo ...",
     "searchAextent": "Search for an extent ...",
     "searchAresourceConstraints": "Search for a constraint statement ...",
     "searchAconstraint": "Search for a constraint ...",
-    "searchAcontact": "Search for a contact ...",
+    "searchAcontact": "Search for organisation or contact ...",
     "searchAnOrganisation": "Search for an organisation ...",
     "searchAformat": "Search for a format ...",
     "setAndReplaceExtent": "Replace existing extent",
@@ -321,8 +322,8 @@
     "to-iso19115-3.2018-keyword-with-anchor-help": "Useful for having an hyperlink on the keyword which usually is the keyword identifier. A gcx:Anchor element is used for each keywords.",
     "toggleAttributes": "More details",
     "toggleTooltips": "Tooltips",
-    "unknownType": "Others",
-    "unpublish": "Unpublish",
+    "unknownType": "Eraill",
+    "unpublish": "Heb ei gyhoeddi",
     "unpublishSuccess": "Successful unpublication",
     "unsupportedSchemaAlert": "Metadata <strong>{{title}}</strong> is using <strong>{{schema}}</strong> standard. This is not supported by the editor. <a href='#'>Return to editor board</a>.",
     "uploadFile": "Upload a file from your computer",
@@ -335,8 +336,8 @@
     "validationServiceError": "Server error",
     "validationServiceErrorDetail": "Please check server's log files for more information.",
     "fixedOnTop": "Always on top",
-    "whoCanAccess": "Who has access",
-    "wmsServiceUrl": "Service URL",
+    "whoCanAccess": "Pwy sydd â mynediad",
+    "wmsServiceUrl": "URL Gwasanaeth",
     "xmlSnippet": "XML snippet",
     "xsltToApply": "Apply XSLT conversion",
     "yearAndMonthMode": "Year and month",
@@ -344,10 +345,10 @@
     "uploadFileByUrl": "Upload a file from URL",
     "noFileSelected": "Choose a file to load!",
     "yourMetadata": "Your metadata",
-    "searchKeyword": "Search ...",
-    "searchTopicCategory": "Search ...",
+    "searchKeyword": "Chwilio...",
+    "searchTopicCategory": "Chwilio...",
     "searchOrTypeKeyword": "Type or search ...",
-    "tagsAllowed": " tag(s) allowed",
+    "tagsAllowed": "tag(s) allowed",
     "suggestionListError": "Oops, something went wrong when retrieving suggestions!",
     "showHideErrors": "Show / hide errors",
     "showHideSuccess": "Show / hide success",
@@ -364,10 +365,10 @@
     "notConformant": "Not conformant",
     "capabilitiesParseError": "Error parsing WMS capabilities",
     "conformant": "Conformant",
-    "currentConcept":"Current concept",
-    "parentConcept":"Parent concept",
-    "moreSpecificConcept":"More specific concepts",
-    "associatedConcept":"Associated concepts",
+    "currentConcept": "Current concept",
+    "parentConcept": "Parent concept",
+    "moreSpecificConcept": "More specific concepts",
+    "associatedConcept": "Associated concepts",
     "xsd": "Schema validation",
     "youAreNotMemberOfAnyGroup": "You are not editor of any groups, so you can't create new records. Ask the catalogue administrator to set your role to editor in at least one group.",
     "linkToXmlTab": "Some kind of errors can be fixed using <a href=\"#/metadata/{{metadataId}}?tab=xml\">XML editor</a>.",
@@ -381,12 +382,13 @@
     "directoryEntryFromScratch": "Create an entry from scratch",
     "directoryEntryInfo": "Owner: {{ownerName}}, updated on {{updateDate}}",
     "directoryEntryPermissions": "Permissions",
-    "directoryEntryValidate": "Validate",
+    "directoryEntryValidate": "Dilysu",
     "directoryEntryReject": "Reject",
     "directoryEntryToTemplate": "Convert to template",
     "directoryEntryAssociatedMetadata": "Associated Metadata",
     "directoryEntryEditor": "Entry Editor",
     "directoryEntryEditing": "Currently editing:",
+    "directoryEntry-removeError-referenced": "You can't remove this subtemplate cause it is used in some records.",
     "directoryManagerMode-newEntry": "New Entry",
     "directoryManagerMode-editEntry": "Edit Entry",
     "directoryManagerMode-newTemplate": "New Template",
@@ -402,16 +404,16 @@
     "inputGeometryIsInvalid": "An error was found in the input geometry:",
     "inputGeometryHint": "Paste a geometry here in the selected format and projection system.",
     "inputGeometryReadOnlyHint": "This geometry is read-only.",
-    "selectKeyword": "Add keywords",
+    "selectKeyword": "Ychwanegu geiriau allweddol",
     "saveLinkToSibling": "Save link to other resource",
     "addTheFollowingLinkInDataset": "Add the following link to the dataset (as an online source in the distribution section):",
     "confirmCloseInvalidTitle": "Confirm editor close",
     "confirmCloseInvalidMetadata": "The current metadata has been found to be invalid. Closing the editor will cause it to be unpublished (this can be changed in the application settings).<br><br>Are you sure you want to proceed?",
     "hotkeyDirectory": "Manage directories (eg. contact)",
-    "hotkeyImportRecord": "Import new records",
-    "hotkeyAddRecord": "Add new record",
-    "hotkeyBatchEdit": "Batch editing",
-    "hotkeyEditorBoard": "Editor board",
+    "hotkeyImportRecord": "Mewngludo cofnodion newydd",
+    "hotkeyAddRecord": "Ychwanegu cofnod newydd",
+    "hotkeyBatchEdit": "Golygu swp",
+    "hotkeyEditorBoard": "Bwrdd golygu",
     "cancelMetadataError": "Error, please reload the page",
     "showMessages": "Show messages:",
     "hotkeyAccessManager": "Access rights manager",
@@ -420,12 +422,29 @@
     "accessManagerChooseGroups": "Choose one or more groups",
     "accessManagerChooseOperations": "Choose one or more operation types",
     "status-no-status": "Workflow not active",
-    "badGmlProjectionCode": "  The geometry projection <b>{{srsName}}</b> defined in the XML is not valid. Please edit the xml to fix the srs name or enter a new geometry.\n",
-    "draft": "Working copy",
+    "badGmlProjectionCode": "The geometry projection <b>{{srsName}}</b> defined in the XML is not valid. Please edit the xml to fix the srs name or enter a new geometry.",
+    "draft": "Copi gweithio",
     "link": "Link",
     "link-text": "Link text",
     "confirmCancelEdit": "Do you want to cancel all changes and close the editor?",
     "allowEditGroupMembers": "Allow group editors to edit",
     "wmsSelectedLayers": "Selected layers",
-    "wmsSelectedLayersNone": "No layers selected"
+    "wmsSelectedLayersNone": "No layers selected",
+    "remoteAssociatedMetadataTitlePlaceholder": "Remote associated metadata title",
+    "distributionPanel": "Distributions",
+    "onlineDiscoverWMSTitle": "Link to a WMS service",
+    "onlineDiscoverArcGISTitle": "Link to an ESRI service",
+    "suggest-add-info-from-wms": "Update with view service info (bbox, crs, overview)",
+    "suggest-create-featurecatalogue-from-wfs": "Add or replace data model",
+    "wmsLayerName": "Layer name",
+    "addOnlinesrc#API": "Add API",
+    "addOnlinesrc#API-help": "eg. view service, REST API",
+    "addOnlinesrc#onlineDownload|localNetwork": "Add download",
+    "addOnlinesrc#onlineDownload|localNetwork-help": "eg. file, download service, local network links",
+    "addOnlinesrc#onlineUseLegend": "Add portrayal",
+    "addOnlinesrc#onlineUseLegend-help": "eg. LYR, QML, SLD files",
+    "addOnlinesrc#links": "Add links",
+    "addOnlinesrc#links-help": "eg. web links",
+    "addOnlinesrc#quality": "Add quality info",
+    "addOnlinesrc#quality-help": "eg. specification, reports"
 }
