--- a/geonetwork/catalog/locales/en-custom.json
+++ b/geonetwork/catalog/locales/en-custom.json
@@ -24,10 +24,12 @@
 	"gmd:LI_Lineage": "Data Quality Reports (Lineage)",
 	"searchAlineage": "Search for a lineage report ...",
 	"wel": "Cymraeg",
+	"cym": "Cymraeg",
 	"zarooResult": "No results found. If you are searching by the metadata URI please include the wildcard * in your search e.g. *98736. If you need assistance in finding metadata records, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a>",
 	"anyFieldTitle": "For precise search results please use “ “ for exact matches. e.g. “Areas of Outstanding Natural Beauty”. To search using the metadata URI, please include the wildcard * in your search e.g. *98736",
 	"recordNotFound": "The metadata entry you are looking for is no longer available. If you need assistance in finding metadata records, please contact <a href='mailto:opendata@cyfoethnaturiolcymru.gov.uk' target='_blank'>opendata@cyfoethnaturiolcymru.gov.uk</a> or for NRW staff please ensure you are <a href=\"catalog.signin?redirect={{url}}\">signed in</a>.",
 	"facet-formatSpecification": "Format specification",
 	"facet-hasOnlineResource": "Available to download",
-	"facet-license": "License"
+	"facet-license": "License",
+	"parentRecord": "Parent record"
 }
