changes to default view layout (remove white space and add NRW profile custom elements)

--- a/geonetwork/catalog/locales/en-custom.json
+++ b/geonetwork/catalog/locales/en-custom.json
@@ -33,5 +33,9 @@
 	"facet-license": "License",
 	"parentRecord": "Parent record",
 	"fileIdentifier": "File identifier",
-	"uuid": "Resource identifier"
+	"uuid": "Resource identifier",
+	"NRWcustomElements": "NRW Profile (Custom Elements)",
+	"NRW_relatedTitles": "NRW Related titles",
+	"NRW_internalContact": "NRW Internal Contact",
+	"NRW_internalLocation": "NRW Internal Location"
 }
