--- a/geonetwork/catalog/locales/en-custom.json
+++ b/geonetwork/catalog/locales/en-custom.json
@@ -38,5 +38,8 @@
 	"NRW_relatedTitles": "NRW Related titles",
 	"NRW_internalContact": "NRW Internal contact",
 	"NRW_internalLocation": "NRW Internal location",
-	"supplementalInformation": "Additional information"
+	"supplementalInformation": "Additional information",
+	"limitationsPublicAccess": "Access restrictions",
+	"useConstraints": "Use constraints",
+	"attributionStatement": "Attribution statement"
 }
