replicate constraints block split strategy from full view in default view

--- a/geonetwork/catalog/locales/en-custom.json
+++ b/geonetwork/catalog/locales/en-custom.json
@@ -41,5 +41,6 @@
 	"supplementalInformation": "Additional information",
 	"limitationsPublicAccess": "Access restrictions",
 	"useConstraints": "Use constraints",
+	"accessConstraints": "Limitations on Public Access and Use",
 	"attributionStatement": "Attribution statement"
 }
